--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,135 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  margin: 50px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+.loginContainer {
+  margin: auto;
+  text-align: center;
+}
+.avatar {
+  height: 100px;
+  border-radius: 50px;
+  margin: 10px;
+}
+.userAvatar {
+  height: 50px;
+  border-radius: 25px;
+  margin: 10px;
+}
+.myVote {
+  background-color: lightgreen;
+}
+.nav {
+  text-decoration: none;
+}
+.nav ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+
+.nav:first-child {
+  padding-left: 0;
+}
+ul {
+  padding-left: 0;
+}
+.nav a:hover {
+  background-color: #ddd;
+}
+
+.nav a:link {
+  text-decoration: none;
+}
+a:active {
+  font-weight: bold;
+}
+li {
+  list-style-type: none;
+  padding: 10px;
+}
+.topPanel {
+  display: flex;
+  flex-direction: row;
+
+  border: 1px solid #ccc;
+  background-color: #f1f1f1;
+  justify-content: space-between;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-bottom: 20px;
+}
+.loggedUser {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+.loggedUser span {
+  margin: auto;
+}
+.logout {
+  border: none;
+}
+.logout:hover {
+  background-color: #ddd;
+}
+.scorecard {
+  border: solid black 2px;
+  padding: 5px;
+}
+/* .tabs {
+  margin: auto;
+} */
+.tab {
+  display: flex;
+  justify-content: center;
+
+  overflow: hidden;
+  border: 1px solid #ccc;
+  background-color: #f1f1f1;
+}
+
+/* Style the buttons that are used to open the tab content */
+.tab button {
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+  background-color: #ccc;
+}
+a:link {
+  color: black;
+}
+a:hover {
+  background-color: #ddd;
+}
+a:visited {
+  color: black;
+}
+.preview {
+  width: 30%;
+  height: 250px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
